# tooling

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cspell.json
.github/workflows/: book.yml
docker/trunk/: Dockerfile
docs/: Formula.md  book.toml  custom.css
docs/branch/: README.md  pipeline.md
docs/src/: Overview.md  SUMMARY.md  formats.md
docs/src/files/: object.md
docs/src/formats/: index.md  object.md  tree.md
docs/twig/: README.md
src/: assert.rs  cache.rs  env.rs  error.rs  files.rs  lib.rs  model.rs  package.rs  tools.rs  util.rs  validators.rs
src/cache/: download.rs
src/env/: buildenv.rs  customexec.rs  executable.rs
src/env/executable/: buildstep.rs
src/error/: architecture.rs  assert.rs  dependency.rs  support.rs  version.rs
src/files/: formula.rs  formulafile.rs  index.rs  package_index.rs  package_meta.rs
src/model/: formula.rs  home.rs  object.rs  objectcompression.rs  objectdb.rs  objectdependency.rs  objectid.rs  objectreader.rs  objecttype.rs  package.rs  tree.rs
src/model/formula/: buildstep.rs  formulabuildstep.rs
src/model/object/: objectcompression.rs  objectdb.rs  objectdependency.rs  objectid.rs  objectreader.rs  objecttype.rs
src/model/object/objectdb/: driver.rs
src/model/object/objectdb/driver/odb_driver/: odb_fs_driver.rs
src/model/tree/: treecommand.rs
src/package/: buildable.rs  built.rs  index.rs  info.rs  installable.rs  installed.rs  installed_index.rs
src/package/index/: indexed.rs  installed.rs
src/tools/: builder.rs  indexer.rs
src/tools/builder/: workdir.rs
src/tools/indexer/: index.rs
src/util/: architecture.rs  archive.rs  download.rs  elf.rs  fs.rs  hash.rs  mount.rs  package.rs  parse.rs  serde.rs  signal.rs  string.rs
src/util/elf/: elfext.rs
src/util/fs/: fsentry.rs  index.rs  pathutil.rs  unix_info.rs  unwind_symlinks.rs  walk.rs
src/util/fs/fsentry/: directory.rs  elf.rs  script.rs
src/util/fs/index/: command.rs
src/util/mount/: bind.rs  overlay.rs  vkfs.rs
src/util/package/: installed.rs
src/util/parse/: versionstring.rs
src/validators/: elf.rs  error.rs  indexed_package.rs  scripts.rs
tooling-codegen/: Cargo.toml
tooling-codegen/src/: lib.rs
