[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "branch"
path = "src/bin/branch/branch.rs"

[[bin]]
name = "formulagen"
path = "src/bin/formulagen/formulagen.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
ctrlc = "3.4.1"
elf = "0.7.3"
infer = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
sys-mount = { version = "2.1.0", default-features = false }
toml = { version = "0.8.8", features = ["display"] }
uname = "0.1.1"
uuid = { version = "1.6.1", features = ["v4"] }

curl = { version = "0.4.44", default-features = false, features = [
    "static-ssl",
    "static-curl",
    "protocol-ftp",
    "ssl",
] }
http = "1.0.0"

tar = "0.4.40"
xz = "0.1.0"
flate2 = "1.0.28"
