[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

[features]
# Compile builder support
builder = ["mount"]

# Enable support for mounting filesystems (needed by 'builder')
mount = ["dep:sys-mount"]

[[bin]]
name = "twig"
path = "src/bin/twig/twig.rs"

[[bin]]
name = "branch"
path = "src/bin/branch/branch.rs"


[dependencies]
elf = "0.7.3"
infer = "0.16.0"
log = "0.4.20"
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.8", features = ["display"] }
uname = "0.1.1"
uuid = { version = "1.6.1", features = ["v4"] }
curl = { version = "0.4.44", default-features = false, features = [
    "protocol-ftp",
    "ssl",
] }
http = "1.2.0"
tar = "0.4.40"
xz = "0.1.0"
flate2 = "1.0.28"
sha2 = "0.10.8"
hex = "0.4.3"
colored = "2.2.0"
base64 = "0.22.0"
home = "0.5.11"
nix = { version = "0.29.0", features = ["fs", "user"] }
indexmap = { version = "2.7.0", features = ["serde"] }
serde_json = "1.0.134"

tooling-codegen = { path = "tooling-codegen" }

# Binary-only dependencies
clap = { version = "4.5.23", features = ["derive"] }
pretty_env_logger = { version = "0.5.0" }

# Feature: mount
sys-mount = { version = "3.0.1", default-features = false, optional = true }
